--- a/draft-boucadair-pppext-portrange-option-08.html
+++ b/draft-boucadair-pppext-portrange-option-08.html
@@ -383,7 +383,7 @@
   
   <meta name="dct.abstract" content="This document defines two Huawei IPCP (IP Configuration Protocol) Options used to convey a set of ports. These options can be used in the context of port range-based solutions or NAT-based ones for port delegation and forwarding purposes." />
   <meta name="description" content="This document defines two Huawei IPCP (IP Configuration Protocol) Options used to convey a set of ports. These options can be used in the context of port range-based solutions or NAT-based ones for port delegation and forwarding purposes." />
-  <meta name="keywords" content="Internet-Draft, Port Range, IPv4 Address Exhaustion, IPv4, IPv6" />
+  <meta name="keywords" content="Port Range, IPv4 Address Exhaustion, IPv4 service continuity, IPv6, A+P" />
 
 </head>
 
@@ -405,7 +405,7 @@
 <td class="right">France Telecom</td>
 </tr>
 <tr>
-<td class="left">Expires: February 20, 2012</td>
+<td class="left">Expires: March 03, 2012</td>
 <td class="right">G. Bajko</td>
 </tr>
 <tr>
@@ -426,7 +426,7 @@
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">August 19, 2011</td>
+<td class="right">August 31, 2011</td>
 </tr>
 
     	
@@ -434,7 +434,7 @@
   </table>
 
   <p class="title">Huawei Port Range Configuration Options for PPP IPCP<br />
-  <span class="filename">draft-boucadair-pppext-portrange-option-07</span></p>
+  <span class="filename">draft-boucadair-pppext-portrange-option-08</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document defines two Huawei IPCP (IP Configuration Protocol) Options used to convey a set of ports. These options can be used in the context of port range-based solutions or NAT-based ones for port delegation and forwarding purposes.</p>
@@ -444,7 +444,7 @@
 <p>This Internet-Draft is submitted to IETF in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on February 20, 2012.</p>
+<p>This Internet-Draft will expire on March 03, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.</p>
@@ -502,7 +502,7 @@
 
   <h1 id="rfc.section.1">
 <a href="#rfc.section.1">1.</a> Introduction</h1>
-<p id="rfc.section.1.p.1">Within the context of IPv4 address depletion, several solutions have been investigated to share IPv4 addresses. Two flavors can be distinguished: NAT-based solutions (a.k.a., Carrier Grade NAT (CGN, <a href="#I-D.ietf-behave-lsn-requirements">[I-D.ietf-behave-lsn-requirements]</a>)) or port range based ones (e.g., <a href="#I-D.ymbk-aplusp">[I-D.ymbk-aplusp]</a>). Port range-based solutions do not require an additional NAT level in the service provider's domain. Several means may be used to convey Port Range information.</p>
+<p id="rfc.section.1.p.1">Within the context of IPv4 address depletion, several solutions have been investigated to share IPv4 addresses. Two flavors can be distinguished: NAT-based solutions (a.k.a., Carrier Grade NAT (CGN, <a href="#I-D.ietf-behave-lsn-requirements">[I-D.ietf-behave-lsn-requirements]</a>)) or port range based ones (e.g., <a href="#RFC6346">[RFC6346]</a> <a href="#I-D.boucadair-port-range">[I-D.boucadair-port-range]</a><a href="#I-D.despres-sam">[I-D.despres-sam]</a>). Port range-based solutions do not require an additional NAT level in the service provider's domain.  Several means may be used to convey Port Range information.</p>
 <p id="rfc.section.1.p.2">This document defines the notion of Port Mask which is generic and flexible. Several allocation schemes may be implemented when using a Port Mask. It proposes a basic mechanism that allows the allocation of a unique port range to a requesting client. This document defines Huawei IPCP options to be used to carry Port Range information.</p>
 <p id="rfc.section.1.p.3">IPv4 address exhaustion is only provided as an example of the usage of the PPP IPCP Options defined in this document. In particular, Port Range Options may be used independently of the presence of IP-Address IPCP Option.</p>
 <p id="rfc.section.1.p.4">This document adheres to the consideration defined in <a href="#RFC2153">[RFC2153]</a>.</p>
@@ -510,8 +510,8 @@
 <p id="rfc.section.1.p.6">Note that IPR disclosures apply to this document (see https://datatracker.ietf.org/ipr/).</p>
 <h1 id="rfc.section.1.1">
 <a href="#rfc.section.1.1">1.1.</a> Use Cases</h1>
-<p id="rfc.section.1.1.p.1">Port Range Options can be used in port range-based solutions (e.g., <a href="#I-D.ymbk-aplusp">[I-D.ymbk-aplusp]</a>) or in a CGN-based solution to bypass the NAT (i.e., for transparent NAT traversal and avoid involving several NAT levels in the path) or to delegate one or a set of ports to the requesting client (e.g., avoid ALG (Application Level Gateway) or for port forwarding).</p>
-<p id="rfc.section.1.1.p.2">For improved security an option for delegating cryptographically random port range is defined.</p>
+<p id="rfc.section.1.1.p.1">Port Range Options can be used in port range-based solutions (e.g., <a href="#RFC6346">[RFC6346]</a>) or in a CGN-based solution. These options can be used in a CGN context to bypass the NAT (i.e., for transparent NAT traversal and avoid involving several NAT levels in the path) or to delegate one or a set of ports to the requesting client (e.g., avoid ALG (Application Level Gateway) or for port forwarding).</p>
+<p id="rfc.section.1.1.p.2">Architecture considerations are out of scope of this document.  <a href="#RFC6346">[RFC6346]</a> specifies an architecture using the options defined in this document.</p>
 <h1 id="rfc.section.1.2">
 <a href="#rfc.section.1.2">1.2.</a> Terminology</h1>
 <p id="rfc.section.1.2.p.1">To differentiate between a Port Range containing a contiguous span of port numbers and a Port Range with non contiguous and possibly random port numbers, the following denominations are used:</p>
@@ -523,13 +523,13 @@
 <li>Random Port Range: a cryptographically random set of port values.</li>
 </ul>
 
-<p>Unless explicitly mentioned, Port Mask refers to the couple (Port Range Value, Port Range Mask).</p>
+<p>Unless explicitly mentioned, Port Mask refers to the tuple (Port Range Value, Port Range Mask).</p>
 <p id="rfc.section.1.2.p.3">In addition, this document makes use of the following terms:</p>
 <p><a href="#RFC1661">[RFC1661]</a>.</p>
 
 <ul>
-<li>Delegated port or port range: a port or a range of ports belonging to an IP address managed by an upstream device (such as NAT), which are delegated to a client for use as source address and port when sending packets.</li>
-<li>Forwarded port or port range: a port or a range of ports belonging to an IP address managed by an upstream device such as (NAT), which is/are statically mapped to the internal IP address of the client and same port number of the client.</li>
+<li>Delegated port or delegated port range: a port or a range of ports belonging to an IP address managed by an upstream device (such as NAT), which are delegated to a client for use as source address and port when sending packets.</li>
+<li>Forwarded port or forwarder port range: a port or a range of ports belonging to an IP address managed by an upstream device such as (NAT), which is/are statically mapped to the internal IP address of the client and same port number of the client.</li>
 </ul>
 
 <p>This memo uses the same terminology as per </p>
@@ -546,8 +546,9 @@
 <h1 id="rfc.section.2.1">
 <a href="#rfc.section.2.1">2.1.</a> <a href="#value_1" id="value_1">Description of Port Range Value and Port Range Mask</a>
 </h1>
-<p id="rfc.section.2.1.p.1">The Port Range Value and Port Range Mask are used to specify one range of ports (contiguous or not contiguous) pertaining to a given IP address. Concretely, Port Range Mask and Port Range Value are used to notify a remote peer about the Port Mask to be applied when selecting a port value as a source port. The Port Range Value is used to infer a set of allowed port values. A Port Range Mask defines a set of ports that all have in common a subset of pre-positioned bits. This set of ports is also called Port Range. Two port numbers are said to belong to the same Port Range if and only if, they have the same Port Range Mask.</p>
-<p id="rfc.section.2.1.p.2">A Port Mask is composed of a Port Range Value and a Port Range Mask:</p>
+<p id="rfc.section.2.1.p.1">The Port Range Value and Port Range Mask are used to specify one range of ports (contiguous or not contiguous) pertaining to a given IP address. Concretely, Port Range Mask and Port Range Value are used to notify a remote peer about the Port Mask to be applied when selecting a port value as a source port. The Port Range Value is used to infer a set of allowed port values. A Port Range Mask defines a set of ports that all have in common a subset of pre-positioned bits. This set of ports is also called Port Range.</p>
+<p id="rfc.section.2.1.p.2">Two port numbers are said to belong to the same Port Range if and only if, they have the same Port Range Mask.</p>
+<p id="rfc.section.2.1.p.3">A Port Mask is composed of a Port Range Value and a Port Range Mask:</p>
 <p></p>
 
 <ul>
@@ -558,9 +559,10 @@
 </li>
 <li>The Port Range Mask indicates, by the bit(s) set to 1, the position of the significant bits of the Port Range Value.</li>
 </ul>
-<p id="rfc.section.2.1.p.4">This IPCP Configuration Option provides a way to negotiate the Port Range to be used on the local end of the link. It allows the sender of the Configure-Request message to state which Port Range associated with a given IP address is desired, or to request the peer to provide the configuration. The peer can provide this information by NAKing the option, and returning a valid Port Range (i.e., (Port Range Value, Port Range Mask)).</p>
-<p id="rfc.section.2.1.p.5">When a peer issues a request enclosing IPCP Port Range Option, and if the server does not support this option, the Port Range Option is rejected by the server.</p>
-<p id="rfc.section.2.1.p.6">The Port Range IPCP option adheres to the format defined in Section 2.1 of <a href="#RFC2153">[RFC2153]</a>. The "value" field of the option defined in <a href="#RFC2153">[RFC2153]</a> when conveying Port Range IPCP Option is provided in <a href="#Figure_1">Figure 1</a>.</p>
+<p id="rfc.section.2.1.p.5">This IPCP Configuration Option provides a way to negotiate the Port Range to be used on the local end of the link. It allows the sender of the Configure-Request message to state which Port Range associated with a given IP address is desired, or to request the peer to provide the configuration. The peer can provide this information by NAKing the option, and returning a valid Port Range (i.e., (Port Range Value, Port Range Mask)).</p>
+<p id="rfc.section.2.1.p.6">When a peer issues a request enclosing IPCP Port Range Option, and if the server does not support this option, the Port Range Option is rejected by the server.</p>
+<p id="rfc.section.2.1.p.7">The set of ports conveyed in an IPCP Port Range Option belong to all transport protocols.</p>
+<p id="rfc.section.2.1.p.8">The Port Range IPCP option adheres to the format defined in Section 2.1 of <a href="#RFC2153">[RFC2153]</a>. The "value" field of the option defined in <a href="#RFC2153">[RFC2153]</a> when conveying Port Range IPCP Option is provided in <a href="#Figure_1">Figure 1</a>.</p>
 <div id="#rfc.figure.1"></div>
 <div id="#Figure_1"></div>
 <p></p>
@@ -580,14 +582,14 @@
 
 <ul>
 <li>M: mode bit. It indicates the mode the port range is allocated for. A value of zero indicates the port ranges are delegated, while a value of 1 indicates the port ranges are port forwarded.</li>
-<li>Port Range Value (PRV): PRV indicates the value of the significant bits of the Port Mask. By default, no PRV is assigned.</li>
+<li>Port Range Value (PRV): PRV indicates the value of the significant bits of the Port Mask. By default, no PRV is assigned.  </li>
 <li>Port Range Mask (PRM): Port Range Mask indicates the position of the bits which are used to build the Port Range Value. By default, no PRM value is assigned. The 1 values in the Port Range Mask indicate by their position the significant bits of the Port Range Value.</li>
 </ul>
 <p><a href="#Figure_3">Figure 2</a> provides an example of the resulting Port Range:</p>
-<p id="rfc.section.2.1.p.10">- Port Range Mask is set to 0001010000000000 (5120) and</p>
+<p id="rfc.section.2.1.p.12">- Port Range Mask is set to 0001010000000000 (5120) and</p>
 <div id="#rfc.figure.2"></div>
 <div id="#Figure_3"></div>
-<p id="rfc.section.2.1.p.11">- Port Range Value is set to 0000010000000000 (1024).</p>
+<p id="rfc.section.2.1.p.13">- Port Range Value is set to 0000010000000000 (1024).</p>
 
 <p></p>
 <pre>
@@ -649,7 +651,6 @@
             msg[2...15] = 0
             return AES(k, msg)[0]</pre>
 <p></p>
-<p id="rfc.section.2.2.1.p.13">Other port generator functions may be predefined in Standards Track documents and allocated a not yet allocated 'function' value within the corresponding sub-option type field.</p>
 <h1 id="rfc.section.2.2.2">
 <a href="#rfc.section.2.2.2">2.2.2.</a> <a href="#value_2" id="value_2">Description of Cryptographically Random Port Range Option</a>
 </h1>
@@ -852,14 +853,14 @@
 <a href="#rfc.section.4">4.</a> <a href="#Security" id="Security">Security Considerations</a>
 </h1>
 <p id="rfc.section.4.p.1">This document does not introduce any security issue in addition to those related to PPP. Service providers should use authentication mechanisms such as CHAP <a href="#RFC1994">[RFC1994]</a> or PPP link encryption <a href="#RFC1968">[RFC1968]</a>.</p>
-<p id="rfc.section.4.p.2">Use of small and non-random port range may increase host exposure to attacks described <a href="#RFC6056">[RFC6056]</a>. This risk can be reduced by using larger port range or by using Random Port Range Option.</p>
+<p id="rfc.section.4.p.2">The use of small and non-random port range may increase host exposure to attacks described in <a href="#RFC6056">[RFC6056]</a>. This risk can be reduced by using larger port ranges, by using Random Port Range Option or by activating means to improve the robustness of TCP against Blind In-Window Attacks <a href="#RFC5961">[RFC5961]</a>.</p>
 <h1 id="rfc.section.5">
 <a href="#rfc.section.5">5.</a> Contributors</h1>
 <p id="rfc.section.5.p.1">Jean-Luc Grimault and Alain Villefranque contributed to this document.</p>
 <h1 id="rfc.section.6">
 <a href="#rfc.section.6">6.</a> <a href="#Acknowledgements" id="Acknowledgements">Acknowledgements</a>
 </h1>
-<p id="rfc.section.6.p.1">The authors would like to thank C. Jacquenet, J. Carlson, B.  Carpenter and M. Townsley for their review.</p>
+<p id="rfc.section.6.p.1">The authors would like to thank C. Jacquenet, J. Carlson, B.  Carpenter, M. Townsley and J. Arkko for their review.</p>
 <h1 id="rfc.references">
 <a href="#rfc.references">7.</a> References</h1>
 <h1 id="rfc.references.1">
@@ -890,6 +891,11 @@
 <td class="top">
 <a href="mailto:wsimpson@GreenDragon.com" title="DayDreamer, Computer Systems Consulting Services">Simpson, W.</a> and <a href="mailto:karl@Ascend.com" title="Ascend Communications">K. Fox</a>, "<a href="http://tools.ietf.org/html/rfc2153">PPP Vendor Extensions</a>", RFC 2153, May 1997.</td>
 </tr>
+<tr>
+<td class="reference"><b id="RFC5961">[RFC5961]</b></td>
+<td class="top">
+<a>Ramaiah, A.</a>, <a>Stewart, R.</a> and <a>M. Dalal</a>, "<a href="http://tools.ietf.org/html/rfc5961">Improving TCP's Robustness to Blind In-Window Attacks</a>", RFC 5961, August 2010.</td>
+</tr>
 </tbody></table>
 <h1 id="rfc.references.2">
 <a href="#rfc.references.2">7.2.</a> Informative References</h1>
@@ -900,9 +906,19 @@
 <a>Perreault, S</a>, <a>Yamagata, I</a>, <a>Miyakawa, S</a>, <a>Nakagawa, A</a> and <a>H Ashida</a>, "<a href="http://tools.ietf.org/html/draft-ietf-behave-lsn-requirements-04">Common requirements for Carrier Grade NAT (CGN)</a>", Internet-Draft draft-ietf-behave-lsn-requirements-04, October 2011.</td>
 </tr>
 <tr>
-<td class="reference"><b id="I-D.ymbk-aplusp">[I-D.ymbk-aplusp]</b></td>
+<td class="reference"><b id="RFC6346">[RFC6346]</b></td>
 <td class="top">
-<a>Bush, R</a>, "<a href="http://tools.ietf.org/html/draft-ymbk-aplusp-10">The A+P Approach to the IPv4 Address Shortage</a>", Internet-Draft draft-ymbk-aplusp-10, May 2011.</td>
+<a>Bush, R.</a>, "<a href="http://tools.ietf.org/html/rfc6346">The Address plus Port (A+P) Approach to the IPv4 Address Shortage</a>", RFC 6346, August 2011.</td>
+</tr>
+<tr>
+<td class="reference"><b id="I-D.boucadair-port-range">[I-D.boucadair-port-range]</b></td>
+<td class="top">
+<a>Boucadair, M</a>, <a>Levis, P</a>, <a>Bajko, G</a> and <a>T Savolainen</a>, "<a href="http://tools.ietf.org/html/draft-boucadair-port-range-02">IPv4 Connectivity Access in the Context of IPv4 Address Exhaustion: Port Range based IP Architecture</a>", Internet-Draft draft-boucadair-port-range-02, July 2009.</td>
+</tr>
+<tr>
+<td class="reference"><b id="I-D.despres-sam">[I-D.despres-sam]</b></td>
+<td class="top">
+<a>Despres, R</a>, "<a href="http://tools.ietf.org/html/draft-despres-sam-03">Scalable Multihoming across IPv6 Local-Address Routing Zones Global-Prefix/Local-Address Stateless Address Mapping (SAM)</a>", Internet-Draft draft-despres-sam-03, July 2009.</td>
 </tr>
 <tr>
 <td class="reference"><b id="RFC6056">[RFC6056]</b></td>
@@ -926,8 +942,7 @@
 	</span>
 	<span class="org vcardline">France Telecom</span>
 	<span class="adr">
-	  <span>3, Av Fran&#231;ois Ch&#226;teau</span>
-
+	  
 	  <span class="vcardline">
 		<span class="locality">Rennes</span>,  
 		<span class="region"></span>
@@ -1022,7 +1037,7 @@
 	</span>
 	<span class="vcardline">Phone: +1 408 330 4424</span>
 
-<span class="vcardline">EMail: <a href="mailto:tena@huawei.com">tena@huawei.com</a></span>
+<span class="vcardline">EMail: <a href="mailto:tina.tsou.zouting@huawei.com">tina.tsou.zouting@huawei.com</a></span>
 
   </address>
 </div>
