--- a/draft-ietf-opsawg-mpls-tp-oam-def-09.html
+++ b/draft-ietf-opsawg-mpls-tp-oam-def-09.html
@@ -398,7 +398,7 @@
 <td class="right">H. van Helvoort</td>
 </tr>
 <tr>
-<td class="left">Expires: September 30, 2011</td>
+<td class="left">Expires: October 08, 2011</td>
 <td class="right">Huawei Technologies</td>
 </tr>
 <tr>
@@ -427,7 +427,7 @@
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">March 29, 2011</td>
+<td class="right">April 06, 2011</td>
 </tr>
 
     	
@@ -435,7 +435,7 @@
   </table>
 
   <p class="title">"Guidelines for the use of the OAM acronym in the IETF"<br />
-  <span class="filename">draft-ietf-opsawg-mpls-tp-oam-def-08.txt</span></p>
+  <span class="filename">draft-ietf-opsawg-mpls-tp-oam-def-09.txt</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>At first glance the acronym "OAM" seems to be well known and well understood.  Looking at the acronym a bit more closely reveals a set of recurring problems that are revisited time and again.  </p>
@@ -444,7 +444,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 30, 2011.</p>
+<p>This Internet-Draft will expire on October 08, 2011.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -489,7 +489,7 @@
   <h1 id="rfc.section.1">
 <a href="#rfc.section.1">1.</a> <a href="#intro" id="intro">Introduction</a>
 </h1>
-<p id="rfc.section.1.p.1">The main purpose of this document is to provide a definition of the OAM acronym such that it is useful for the IETF.  </p>
+<p id="rfc.section.1.p.1">The main purpose of this document is to provide a definition of the acronym OAM (Operations, Administration, and Maintenance) for use in all future IETF documents that refer to OAM.  </p>
 <p id="rfc.section.1.p.2">The acronym OAM is frequently used in the data and telecommunication industry. One would assume that something that is so widely used is very clearly defined. However a closer look reveals some points that need to be clarified.  </p>
 <p id="rfc.section.1.p.3">The examples below show a number of different ways that the OAM acronym has been expanded in previous documents.  </p>
 
@@ -551,8 +551,8 @@
 <h1 id="rfc.section.3">
 <a href="#rfc.section.3">3.</a> <a href="#solution" id="solution">Recommendations on the use of the OAM Acronym</a>
 </h1>
-<p id="rfc.section.3.p.1">In  <a href="#acro">Section 4</a> the recommended acronyms are listed.  This section gives some background on the definitions provided.  </p>
-<p id="rfc.section.3.p.2">"Mgmt" will be used if an abbreviation for "Management" is needed.  This draft does not define Management.  It is noted, however, that an important part of management functionality relates to tools to report the state of the network.  </p>
+<p id="rfc.section.3.p.1">In  <a href="#acro">Section 4</a> the IETF recommended expansion of the OAM acronym is listed.  This section gives some background on the definitions provided.  </p>
+<p id="rfc.section.3.p.2">"Mgmt" will be used if an abbreviation for "Management" is needed.  This document does not define Management.  It is noted, however, that an important part of management functionality relates to tools to report the state of the network.  </p>
 <p id="rfc.section.3.p.3">The OAM acronym is to be used for "Operations, Administration, and Maintenance", excluding provisioning.  </p>
 <p id="rfc.section.3.p.4">OAM tools and protocols, and the "Management space" are complementary in nature. Management focuses on FCAPS (Fault, Configuration, Accounting, Performance, and Security) functionality and on manager (or NOC (Network Operations Center)) to device (or network) interaction.  </p>
 <p id="rfc.section.3.p.5">From an architecture point of view OAM protocols and tools deployed in the data plane tend to be "horizontal", i.e., network element to network element. The management protocols tend to be "vertical", i.e., between management stations and network elements.  </p>
@@ -576,9 +576,10 @@
 <h1 id="rfc.section.4">
 <a href="#rfc.section.4">4.</a> <a href="#acro" id="acro">Recommended Acronyms</a>
 </h1>
-<p id="rfc.section.4.p.1">OAM - Operations, Administration, and Maintenance </p>
-<p id="rfc.section.4.p.2">O&amp;M - OAM and Management </p>
-<p id="rfc.section.4.p.3">"Mgmt" - Management </p>
+<p id="rfc.section.4.p.1">The IETF recommended expansion of the OAM acronym is given below.  In addition to the OAM acronym, two other recommendations are made in this section.  </p>
+<p id="rfc.section.4.p.2">OAM - Operations, Administration, and Maintenance </p>
+<p id="rfc.section.4.p.3">O&amp;M - OAM and Management </p>
+<p id="rfc.section.4.p.4">"Mgmt" - Management </p>
 <h1 id="rfc.section.5">
 <a href="#rfc.section.5">5.</a> <a href="#iana" id="iana">IANA Considerations</a>
 </h1>
